creacion de paginas auxiliares
se agragaron los enlaces y se modificaron los estilos

--- a/retratos/retratos.html
+++ b/retratos/retratos.html
@@ -1,16 +1,14 @@
 <!doctype html>
 <html>
-	<head>
+<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0"> 
-		<title>Inicio</title>
-		<link href="css3/estilos.css" rel="stylesheet" type="text/css">
+		<title>retratos</title>
+		<link href="../css3/estilos.css" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-	</head>
-
-	<body>
-		<header>
-			<p class="titulo">Comenzando con la fotografía</p>
+</head>
+<header>
+			<p class="titulo">Retratos</p>
 			<navbar id="menu_principal">
 					<a href="index.html">inicio</a>					
 					<a href="paisajes/paisajes.html">paisajes</a>
@@ -22,5 +20,6 @@
 		<footer>
 			
 		</footer>
-	</body>
+<body>
+</body>
 </html>
