--- a/paisajes/paisajes.html
+++ b/paisajes/paisajes.html
@@ -10,9 +10,9 @@
 <header>
 			<p class="titulo">Paisajes</p>
 			<navbar id="menu_principal">
-					<a href="index.html">inicio</a>					
+					<a href="../index.html">inicio</a>					
 					<a href="paisajes/paisajes.html">paisajes</a>
-					<a href="retratos/retratos.html">retratos</a>
+					<a href="../retratos/retratos.html">retratos</a>
 				
 			</navbar>
 					
