--- a/retratos/retratos.html
+++ b/retratos/retratos.html
@@ -10,8 +10,8 @@
 <header>
 			<p class="titulo">Retratos</p>
 			<navbar id="menu_principal">
-					<a href="index.html">inicio</a>					
-					<a href="paisajes/paisajes.html">paisajes</a>
+					<a href="../index.html">inicio</a>					
+					<a href="../paisajes/paisajes.html">paisajes</a>
 					<a href="retratos/retratos.html">retratos</a>
 				
 			</navbar>
