subrrayado de enlaces
se modificaron los subrrados de los enlaces para que en la pagina actual no aparezca un surrayado pero en las inactivas si aparezcan los enlaces subrrayados

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 			<p class="titulo">Comenzando con la fotografía</p>
 			<navbar id="menu_principal">
 					<a href="index.html">inicio</a>					
-					<a href="paisajes/paisajes.html">paisajes</a>
-					<a href="retratos/retratos.html">retratos</a>
-				
+					<ins><a href="paisajes/paisajes.html">paisajes</a></ins>
+					<ins><a href="retratos/retratos.html">retratos</a></ins>				
 			</navbar>
 					
 		</header>
