--- a/paisajes/paisajes.html
+++ b/paisajes/paisajes.html
@@ -10,10 +10,9 @@
 <header>
 			<p class="titulo">Paisajes</p>
 			<navbar id="menu_principal">
-					<a href="../index.html">inicio</a>					
+					<ins><a href="../index.html">inicio</a></ins>					
 					<a href="paisajes/paisajes.html">paisajes</a>
-					<a href="../retratos/retratos.html">retratos</a>
-				
+					<ins><a href="../retratos/retratos.html">retratos</a></ins>				
 			</navbar>
 					
 		</header>
