--- a/retratos/retratos.html
+++ b/retratos/retratos.html
@@ -10,10 +10,9 @@
 <header>
 			<p class="titulo">Retratos</p>
 			<navbar id="menu_principal">
-					<a href="../index.html">inicio</a>					
-					<a href="../paisajes/paisajes.html">paisajes</a>
-					<a href="retratos/retratos.html">retratos</a>
-				
+					<ins><a href="../index.html">inicio</a></ins>					
+					<ins><a href="../paisajes/paisajes.html">paisajes</a></ins>
+					<a href="retratos/retratos.html">retratos</a>				
 			</navbar>
 					
 		</header>
