patron de diseño
se modifico el patron de maquetacion para hacerlo mas eficiente en la adptacion

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
 					<a href="index.html">inicio</a>					
 					<ins><a href="paisajes/paisajes.html">paisajes</a></ins>
 					<ins><a href="retratos/retratos.html">retratos</a></ins>				
-			</navbar>
-					
+			</navbar>					
 		</header>
+		<section>
+			<figure id="paraiso">
+				<figcaption>paraiso</figcaption>
+				<img src="imagenes/imagen1.jpg" alt="paraiso">
+			</figure>
+		</section>
 		<footer>
 			
 		</footer>
