inserscion de imagenes
se insertaron las imagenes ademasse modificaron los tamaños

--- a/index.html
+++ b/index.html
@@ -17,14 +17,30 @@
 					<ins><a href="retratos/retratos.html">retratos</a></ins>				
 			</navbar>					
 		</header>
-		<section>
-			<figure id="paraiso">
-				<figcaption>paraiso</figcaption>
-				<img src="imagenes/imagen1.jpg" alt="paraiso">
-			</figure>
-		</section>
-		<footer>
-			
-		</footer>
+		<div id="contenedor">
+			<section>
+				<article id="paraiso">
+					<figure>
+						<img src="imagenes/imagen1.jpg" alt="paraiso">
+						<figcaption></figcaption>
+					</figure>
+				</article>
+				<article id="paisajes">
+					<figure >
+						<img src="imagenes/imagen2.jpg" alt="paisajes">
+						<figcaption>paisajes</figcaption>
+					</figure>
+				</article>
+				<article id="retratos">
+					<figure >
+						<img src="imagenes/imagen3.jpg" alt="retratos">
+						<figcaption>retratos</figcaption>
+					</figure>
+				</article>
+			</section>
+			<footer>
+
+			</footer>
+		</div>
 	</body>
 </html>
