--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 					</figure>
 				</article>
 				<article id="paisajes">
-					<figure >
+					<a href="paisajes/paisajes.html"><figure >
 						<img src="imagenes/imagen2.jpg" alt="paisajes">
 						<figcaption>paisajes</figcaption>
-					</figure>
+					</figure></a>
 				</article>
 				<article id="retratos">
-					<figure >
+					<a href="retratos/retratos.html"><figure >
 						<img src="imagenes/imagen3.jpg" alt="retratos">
 						<figcaption>retratos</figcaption>
-					</figure>
+					</figure></a>
 				</article>
 			</section>
 			<footer>
