--- a/index.html
+++ b/index.html
@@ -39,6 +39,47 @@
 				</article>
 			</section>
 			<footer>
+				<div class="pie">
+					<div class="columna 1"><h2>Cotacto</h2>
+						<ul>
+							<ins><li><a id="enlace_pie" href="davidbethel2012@hotmail.com" >Contactenos</a></li></ins>
+							<li>Direccion:Cr 33#111-63 B.caldas bucaramanga colombia</li>
+							<li>telefono:316 633 1361</li>
+						</ul>
+					</div>
+					<div class="columna 2"><h2>Terminos</h2><br>
+						<p>Conoce nuestros terminos y condiciones</p>
+					</div>
+					<div class="columna 3">
+						<h2>Redes Sociales</h2>
+						<div id="contenedor_redes">
+							<a href="http://www.facebook.com" target="_blank">
+								<figure class="redes">
+									<img src="./Iconos/facebook.svg" alt="Facebook">
+									<figcaption>Facebook</figcaption>
+								</figure>
+							</a>
+							<a  href="http://www.twitter.com" target="_blank">
+								<figure class="redes">
+									<img src="./Iconos/twitter.svg" alt="Twitter">
+									<figcaption>Twitter</figcaption>
+								</figure>       			    
+								</a>
+							<a href="http://www.youtube.com" target="_blank">
+								<figure class="redes">
+									<img src="./Iconos/youtube.svg" alt="Youtube">
+									<figcaption>YouTube</figcaption>
+								</figure>
+							</a>
+						</div>
+					 </div>
+					<div class="columna 4"><h2>Derechos</h2>
+						<div id="Copyright">
+							<p>David Fabian Roa</p>
+							<p>Copyright &#64;| 2017</p>
+						</div>
+					</div>
+				</div>
 
 			</footer>
 		</div>
