--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
 					</figure>
 				</article>
 				<article id="paisajes">
-					<a href="paisajes/paisajes.html"><figure >
+					<a href="paisajes/paisajes.html">
+					<figure class="cuerpo" >
 						<img src="imagenes/imagen2.jpg" alt="paisajes">
 						<figcaption>paisajes</figcaption>
 					</figure></a>
 				</article>
 				<article id="retratos">
-					<a href="retratos/retratos.html"><figure >
+					<a href="retratos/retratos.html">
+					<figure class="cuerpo" >
 						<img src="imagenes/imagen3.jpg" alt="retratos">
 						<figcaption>retratos</figcaption>
 					</figure></a>
@@ -41,11 +43,11 @@
 			<footer>
 				<div class="pie">
 					<div class="columna 1"><h2>Cotacto</h2>
-						<ul>
-							<ins><li><a id="enlace_pie" href="davidbethel2012@hotmail.com" >Contactenos</a></li></ins>
-							<li>Direccion:Cr 33#111-63 B.caldas bucaramanga colombia</li>
-							<li>telefono:316 633 1361</li>
-						</ul>
+						<div id="contacto">
+							<p><a id="enlace_pie" href="davidbethel2012@hotmail.com" >Contactenos</a></p>
+							<p>Direccion:Cr 33#111-63 B.caldas bucaramanga colombia</p>
+							<p>telefono:316 633 1361</p>
+						</div>
 					</div>
 					<div class="columna 2"><h2>Terminos</h2><br>
 						<p>Conoce nuestros terminos y condiciones</p>
