--- a/paisajes/paisajes.html
+++ b/paisajes/paisajes.html
@@ -8,14 +8,29 @@
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
 <header>
-			<p class="titulo">Paisajes</p>
+			<p class="titulo">Comenzando con los Paisajes</p>
 			<navbar id="menu_principal">
 					<ins><a href="../index.html">inicio</a></ins>					
-					<a href="paisajes/paisajes.html">paisajes</a>
+					<a href="paisajes.html">paisajes</a>
 					<ins><a href="../retratos/retratos.html">retratos</a></ins>				
 			</navbar>
+</header>
+			<div class="contenedor">
+				<div class="fila">
+					<div class="columna"><img src="paisajes.html" alt=""></div>
+					<div class="columna"><img src="paisajes.html" alt=""></div>
+				</div>
+				<div class="fila">
+					<div class="columna"><img src="paisajes.html" alt=""></div>
+					<div class="columna"><img src="paisajes.html" alt=""></div>
+				</div>
+				<div class="fila">
+					<div class="columna"><img src="paisajes.html" alt=""></div>
+					<div class="columna"><img src="paisajes.html" alt=""></div>
+				</div>
+			</div>					
 					
-		</header>
+		
 		<footer>
 			
 		</footer>
