--- a/retratos/retratos.html
+++ b/retratos/retratos.html
@@ -8,11 +8,11 @@
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
 <header>
-			<p class="titulo">Retratos</p>
+			<p class="titulo">Comenzando Con Los Retratos</p>
 			<navbar id="menu_principal">
 					<ins><a href="../index.html">inicio</a></ins>					
 					<ins><a href="../paisajes/paisajes.html">paisajes</a></ins>
-					<a href="retratos/retratos.html">retratos</a>				
+					<a href="retratos.html">retratos</a>				
 			</navbar>
 					
 		</header>
