--- a/paisajes/paisajes.html
+++ b/paisajes/paisajes.html
@@ -7,33 +7,75 @@
 		<link href="../css3/estilos.css" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
-<header>
-			<p class="titulo">Comenzando con los Paisajes</p>
-			<navbar id="menu_principal">
-					<ins><a href="../index.html">inicio</a></ins>					
-					<a href="paisajes.html">paisajes</a>
-					<ins><a href="../retratos/retratos.html">retratos</a></ins>				
-			</navbar>
-</header>
-			<div class="contenedor">
-				<div class="fila">
-					<div class="columna"><img src="paisajes.html" alt=""></div>
-					<div class="columna"><img src="paisajes.html" alt=""></div>
-				</div>
-				<div class="fila">
-					<div class="columna"><img src="paisajes.html" alt=""></div>
-					<div class="columna"><img src="paisajes.html" alt=""></div>
-				</div>
-				<div class="fila">
-					<div class="columna"><img src="paisajes.html" alt=""></div>
-					<div class="columna"><img src="paisajes.html" alt=""></div>
-				</div>
-			</div>					
-					
-		
-		<footer>
-			
-		</footer>
 <body>
+	<header>
+				<p class="titulo">Comenzando con los Paisajes</p>
+				<navbar id="menu_principal">
+						<ins><a href="../index.html">inicio</a></ins>					
+						<a href="../imagenes/imagen2.jpg">paisajes</a>
+						<ins><a href="../retratos/retratos.html">retratos</a></ins>				
+				</navbar>
+	</header>
+				<div class="contenido">
+					<div class="fila">
+						<div  id="desenfoque" class="bloque"><img  src="../imagenes/imagen2.jpg" alt="1"></div>
+						<div  class="bloque grises"><img src="../imagenes/imagen2.jpg" alt="1"></div>
+					</div>
+					<div class="fila">
+						<div id="tres" class="bloque grises "><img src="../imagenes/imagen2.jpg" alt="1"></div>
+						<div  class="bloque cuatro"><img src="../imagenes/imagen2.jpg" alt="1"></div>
+					</div>
+					<div class="fila">
+						<div class="bloque sepia"><img src="../imagenes/imagen2.jpg" alt="1"></div>
+						<div  class="bloque grises"><img src="../imagenes/imagen2.jpg" alt="1"></div>
+					</div>
+				</div>					
+
+
+			<footer >
+							<div class="pie">
+					<div class="columna 1"><h2>Cotacto</h2>
+						<div id="contacto">
+							<p><a id="enlace_pie" href="davidbethel2012@hotmail.com" >Contactenos</a></p>
+							<p>Direccion:Cr 33#111-63 B.caldas bucaramanga colombia</p>
+							<p>telefono:316 633 1361</p>
+						</div>
+					</div>
+					<div class="columna 2"><h2>Terminos</h2><br>
+						<p>Conoce nuestros terminos y condiciones</p>
+					</div>
+					<div class="columna 3">
+						<h2>Redes Sociales</h2>
+						<div id="contenedor_redes">
+							<a href="http://www.facebook.com" target="_blank">
+								<figure class="redes">
+									<img src="../Iconos/facebook.svg" alt="Facebook">
+									<figcaption>Facebook</figcaption>
+								</figure>
+							</a>
+							<a  href="http://www.twitter.com" target="_blank">
+								<figure class="redes">
+									<img src="../Iconos/twitter.svg" alt="Twitter">
+									<figcaption>Twitter</figcaption>
+								</figure>       			    
+								</a>
+							<a href="http://www.youtube.com" target="_blank">
+								<figure class="redes">
+									<img src="../Iconos/youtube.svg" alt="Youtube">
+									<figcaption>YouTube</figcaption>
+								</figure>
+							</a>
+						</div>
+					 </div>
+					<div class="columna 4"><h2>Derechos</h2>
+						<div id="Copyright">
+							<p>David Fabian Roa</p>
+							<p>Copyright &#64;| 2017</p>
+						</div>
+					</div>
+				</div>
+
+			</footer>
+
 </body>
 </html>
