se agrego pagina retratos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div class="pie">
 					<div class="columna 1"><h2>Cotacto</h2>
 						<div id="contacto">
-							<p><a id="enlace_pie" href="davidbethel2012@hotmail.com" >Contactenos</a></p>
+							<p><a id="enlace_pie" href="mailto:davidbethel2012@hotmail.com" >Contactenos</a></p>
 							<p>Direccion:Cr 33#111-63 B.caldas bucaramanga colombia</p>
 							<p>telefono:316 633 1361</p>
 						</div>
