--- a/paisajes/paisajes.html
+++ b/paisajes/paisajes.html
@@ -12,10 +12,11 @@
 				<p class="titulo">Comenzando con los Paisajes</p>
 				<navbar id="menu_principal">
 						<ins><a href="../index.html">inicio</a></ins>					
-						<a href="../imagenes/imagen2.jpg">paisajes</a>
+						<a href="paisajes.html">paisajes</a>
 						<ins><a href="../retratos/retratos.html">retratos</a></ins>				
 				</navbar>
 	</header>
+			<div id="aux">
 				<div class="contenido">
 					<div class="fila">
 						<div  id="desenfoque" class="bloque"><img  src="../imagenes/imagen2.jpg" alt="1"></div>
@@ -32,11 +33,11 @@
 				</div>					
 
 
-			<footer >
+			<footer>
 							<div class="pie">
 					<div class="columna 1"><h2>Cotacto</h2>
 						<div id="contacto">
-							<p><a id="enlace_pie" href="davidbethel2012@hotmail.com" >Contactenos</a></p>
+							<p><a href="mailto:davidbethel2012@hotmail.com" id="colorcon">Contactenos</a></p>
 							<p>Direccion:Cr 33#111-63 B.caldas bucaramanga colombia</p>
 							<p>telefono:316 633 1361</p>
 						</div>
@@ -47,19 +48,19 @@
 					<div class="columna 3">
 						<h2>Redes Sociales</h2>
 						<div id="contenedor_redes">
-							<a href="http://www.facebook.com" target="_blank">
+							<a href="http://www.facebook.com" target="_blank" class="color">
 								<figure class="redes">
 									<img src="../Iconos/facebook.svg" alt="Facebook">
 									<figcaption>Facebook</figcaption>
 								</figure>
 							</a>
-							<a  href="http://www.twitter.com" target="_blank">
+							<a  href="http://www.twitter.com" target="_blank" class="color">
 								<figure class="redes">
 									<img src="../Iconos/twitter.svg" alt="Twitter">
 									<figcaption>Twitter</figcaption>
 								</figure>       			    
 								</a>
-							<a href="http://www.youtube.com" target="_blank">
+							<a href="http://www.youtube.com" target="_blank" class="color">
 								<figure class="redes">
 									<img src="../Iconos/youtube.svg" alt="Youtube">
 									<figcaption>YouTube</figcaption>
@@ -76,6 +77,7 @@
 				</div>
 
 			</footer>
+		</div>
 
 </body>
 </html>
