--- a/retratos/retratos.html
+++ b/retratos/retratos.html
@@ -7,18 +7,76 @@
 		<link href="../css3/estilos.css" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
-<header>
-			<p class="titulo">Comenzando Con Los Retratos</p>
-			<navbar id="menu_principal">
-					<ins><a href="../index.html">inicio</a></ins>					
-					<ins><a href="../paisajes/paisajes.html">paisajes</a></ins>
-					<a href="retratos.html">retratos</a>				
-			</navbar>
-					
-		</header>
-		<footer>
-			
-		</footer>
 <body>
+	<header>
+				<p class="titulo">Comenzando Con Los Retratos</p>
+				<navbar id="menu_principal">
+						<ins><a href="../index.html">inicio</a></ins>					
+						<ins><a href="../paisajes/paisajes.html">paisajes</a></ins>
+						<a href="retratos.html">retratos</a>				
+				</navbar>
+				<div id="aux">
+					<div class="contenido">
+						<div class="fila">
+							<div  id="desenfoque" class="bloque"><img  src="../imagenes/imagen3.jpg" alt="1"></div>
+							<div  class="bloque grises"><img src="../imagenes/imagen3.jpg" alt="1"></div>
+						</div>
+						<div class="fila">
+							<div id="tres" class="bloque grises "><img src="../imagenes/imagen3.jpg" alt="1"></div>
+							<div  class="bloque cuatro"><img src="../imagenes/imagen3.jpg" alt="1"></div>
+						</div>
+						<div class="fila">
+							<div class="bloque sepia"><img src="../imagenes/imagen3.jpg" alt="1"></div>
+							<div  class="bloque grises"><img src="../imagenes/imagen3.jpg" alt="1"></div>
+						</div>
+					</div>					
+
+
+				<footer>
+								<div class="pie">
+						<div class="columna 1"><h2>Cotacto</h2>
+							<div id="contacto">
+								<p><a href="mailto:davidbethel2012@hotmail.com" id="colorcon">Contactenos</a></p>
+								<p>Direccion:Cr 33#111-63 B.caldas bucaramanga colombia</p>
+								<p>telefono:316 633 1361</p>
+							</div>
+						</div>
+						<div class="columna 2"><h2>Terminos</h2><br>
+							<p>Conoce nuestros terminos y condiciones</p>
+						</div>
+						<div class="columna 3">
+							<h2>Redes Sociales</h2>
+							<div id="contenedor_redes">
+								<a href="http://www.facebook.com" target="_blank" class="color">
+									<figure class="redes">
+										<img src="../Iconos/facebook.svg" alt="Facebook">
+										<figcaption>Facebook</figcaption>
+									</figure>
+								</a>
+								<a  href="http://www.twitter.com" target="_blank" class="color">
+									<figure class="redes">
+										<img src="../Iconos/twitter.svg" alt="Twitter">
+										<figcaption>Twitter</figcaption>
+									</figure>       			    
+									</a>
+								<a href="http://www.youtube.com" target="_blank" class="color">
+									<figure class="redes">
+										<img src="../Iconos/youtube.svg" alt="Youtube">
+										<figcaption>YouTube</figcaption>
+									</figure>
+								</a>
+							</div>
+						 </div>
+						<div class="columna 4"><h2>Derechos</h2>
+							<div id="Copyright">
+								<p>David Fabian Roa</p>
+								<p>Copyright &#64;| 2017</p>
+							</div>
+						</div>
+					</div>
+
+				</footer>
+			</div>
+
 </body>
 </html>
