tamaño menu animacion
se modifico el tamaño de la fuente del menu y se le agrego animacion slidein como efecto de rebote

--- a/retratos/retratos.html
+++ b/retratos/retratos.html
@@ -15,6 +15,7 @@
 						<ins><a href="../paisajes/paisajes.html">paisajes</a></ins>
 						<a href="retratos.html">retratos</a>				
 				</navbar>
+	</header>
 				<div id="aux">
 					<div class="contenido">
 						<div class="fila">
